[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scenes/transition.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/titleScreen.gd" type="Script" id=2]
[ext_resource path="res://Textures/volcano.png" type="Texture" id=3]
[ext_resource path="res://Textures/tree.png" type="Texture" id=4]
[ext_resource path="res://Textures/grass.png" type="Texture" id=5]
[ext_resource path="res://Textures/sandpng - Copy (1).png" type="Texture" id=6]
[ext_resource path="res://Sprites/Menu_Items/playbutton1.png" type="Texture" id=7]
[ext_resource path="res://Music/title.mp3" type="AudioStream" id=8]
[ext_resource path="res://Sprites/Menu_Items/playbutton0.png" type="Texture" id=9]
[ext_resource path="res://Textures/New Piskel-2.png.png" type="Texture" id=10]
[ext_resource path="res://Textures/Tiles/cloud1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Menu_Items/title_logo.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Menu_Items/play.png" type="Texture" id=13]
[ext_resource path="res://SoundFX/keycollect.tres" type="AudioStream" id=14]
[ext_resource path="res://Textures/backgroundtree.png" type="Texture" id=15]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 2.96
} ]

[sub_resource type="TileSet" id=1]
0/name = "grass.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 40, 64, 24 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.2842, 11.4962 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="SceneBackground" type="Sprite" parent="."]
position = Vector2( 160.247, 90 )
scale = Vector2( 4.98451, 2.78525 )
texture = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="SceneBackground"]
position = Vector2( -25.6315, 27.3111 )
scale = Vector2( 0.200622, 0.288253 )
frames = SubResource( 16 )
frame = 4
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="SceneBackground"]
position = Vector2( -13.2824, 27.6245 )
scale = Vector2( 0.200622, 0.288253 )
frames = SubResource( 16 )
frame = 3
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="SceneBackground"]
position = Vector2( -0.442627, 27.6245 )
scale = Vector2( 0.200622, 0.288253 )
frames = SubResource( 16 )
frame = 3
playing = true

[node name="AnimatedSprite4" type="AnimatedSprite" parent="SceneBackground"]
position = Vector2( 12.3972, 27.6245 )
scale = Vector2( 0.200622, 0.288253 )
frames = SubResource( 16 )
frame = 2
playing = true

[node name="AnimatedSprite5" type="AnimatedSprite" parent="SceneBackground"]
position = Vector2( 25.4085, 27.871 )
scale = Vector2( 0.205984, 0.295957 )
frames = SubResource( 16 )
frame = 1
playing = true

[node name="grass" type="TileMap" parent="SceneBackground"]
position = Vector2( -32.0364, -39.3656 )
scale = Vector2( 0.200622, 0.359034 )
tile_set = SubResource( 1 )
centered_textures = true
format = 1
tile_data = PoolIntArray( 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0 )

[node name="Cloud1" type="Sprite" parent="SceneBackground"]
position = Vector2( -26.6811, -26.8126 )
scale = Vector2( 0.159736, 0.269158 )
texture = ExtResource( 11 )

[node name="Cloud2" type="Sprite" parent="SceneBackground"]
position = Vector2( 25.9799, -23.333 )
scale = Vector2( 0.159736, 0.269158 )
texture = ExtResource( 11 )
flip_h = true

[node name="Area2D" type="Area2D" parent="SceneBackground"]
position = Vector2( -32.149, -32.3131 )
scale = Vector2( 0.200622, 0.359034 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SceneBackground/Area2D"]
position = Vector2( 150.079, 95.6872 )
shape = SubResource( 3 )

[node name="Play" type="Sprite" parent="SceneBackground"]
position = Vector2( 3.98394, 2.0419 )
scale = Vector2( 0.160497, 0.287227 )
texture = ExtResource( 13 )

[node name="volcano" type="AnimatedSprite" parent="SceneBackground"]
position = Vector2( -15.0909, 5.36758 )
scale = Vector2( 0.200622, 0.359034 )
frames = SubResource( 9 )
frame = 4
playing = true

[node name="Backgroundtree" type="Sprite" parent="SceneBackground"]
position = Vector2( -7.52058, 11.5081 )
scale = Vector2( 0.186547, 0.333847 )
texture = ExtResource( 15 )
flip_h = true

[node name="Backgroundtree2" type="Sprite" parent="SceneBackground"]
position = Vector2( -2.97528, 14.2548 )
scale = Vector2( 0.155805, 0.278831 )
texture = ExtResource( 15 )

[node name="Backgroundtree3" type="Sprite" parent="SceneBackground"]
position = Vector2( 1.76849, 11.7096 )
scale = Vector2( 0.200622, 0.359034 )
texture = ExtResource( 15 )
flip_h = true

[node name="Backgroundtree7" type="Sprite" parent="SceneBackground"]
position = Vector2( 10.1975, 11.6088 )
scale = Vector2( 0.200622, 0.359034 )
texture = ExtResource( 15 )
flip_h = true

[node name="Backgroundtree9" type="Sprite" parent="SceneBackground"]
position = Vector2( 30.1831, 12.3141 )
scale = Vector2( 0.200622, 0.359034 )
texture = ExtResource( 15 )
flip_h = true

[node name="Backgroundtree4" type="Sprite" parent="SceneBackground"]
position = Vector2( 6.08473, 14.178 )
scale = Vector2( 0.181269, 0.324401 )
texture = ExtResource( 15 )

[node name="Backgroundtree8" type="Sprite" parent="SceneBackground"]
position = Vector2( 20.8683, 13.0193 )
scale = Vector2( 0.200622, 0.359034 )
texture = ExtResource( 15 )

[node name="Backgroundtree5" type="Sprite" parent="SceneBackground"]
position = Vector2( -21.933, 12.163 )
scale = Vector2( 0.174232, 0.311808 )
texture = ExtResource( 15 )

[node name="Backgroundtree6" type="Sprite" parent="SceneBackground"]
position = Vector2( -29.5332, 13.5735 )
scale = Vector2( 0.174232, 0.311808 )
texture = ExtResource( 15 )

[node name="Tree" type="Sprite" parent="SceneBackground"]
position = Vector2( -24.7207, 10.963 )
scale = Vector2( 0.426469, 0.790095 )
texture = ExtResource( 4 )

[node name="Tree3" type="Sprite" parent="SceneBackground"]
position = Vector2( 17.547, 11.5069 )
scale = Vector2( 0.393592, 0.729185 )
texture = ExtResource( 4 )

[node name="Tree2" type="Sprite" parent="SceneBackground"]
position = Vector2( 25.1145, 12.4346 )
scale = Vector2( 0.365695, 0.677503 )
texture = ExtResource( 4 )
flip_h = true

[node name="TitleLogo" type="Sprite" parent="."]
position = Vector2( 157, 44 )
scale = Vector2( 1.18556, 1.18556 )
texture = ExtResource( 12 )

[node name="title theme" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 156.495, 89.8066 )
scale = Vector2( 1.35938, 1.35938 )
stream = ExtResource( 8 )
volume_db = -0.368
autoplay = true

[node name="playFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 160.247, 90 )
scale = Vector2( 4.98451, 2.78525 )
stream = ExtResource( 14 )

[node name="Playbutton1" type="Sprite" parent="."]
position = Vector2( 150, 96 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 7 )

[node name="Playbutton0" type="Sprite" parent="."]
visible = false
position = Vector2( 150, 96 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )

[node name="transition" parent="." instance=ExtResource( 1 )]

[connection signal="input_event" from="SceneBackground/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_exited" from="SceneBackground/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="finished" from="playFX" to="." method="_on_playFX_finished"]
